// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge/> should have the right class names when variant default and have a custom class 1`] = `
<span
  className="slds-align_absolute-center slds-badge slds-badge_default custom-class"
>
  Badge label
</span>
`;

exports[`<Badge/> should have the right class names when variant inverse 1`] = `
<span
  className="slds-align_absolute-center slds-badge slds-badge_inverse"
>
  Inverse Badge
</span>
`;

exports[`<Badge/> should have the right class names when variant lightest 1`] = `
<span
  className="slds-align_absolute-center slds-badge slds-badge_lightest"
>
  Lightest Badge
</span>
`;
